--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <div class="inner">
                 <h1>Ander-Viek Wedding</h1>
                 <p><!--[-->Information for the big day!<!--]--><br />
-                <!--[-->Check back later...<!--]--></p>
+                <!--[-->Check back soon for updates...<!--]--></p>
               </div>
             </div>
             <nav>
