--- a/index.html
+++ b/index.html
@@ -88,15 +88,13 @@
             
               <article id="directions">
   <h1>directions</h1>
-  <p>Check back soon for more information.</p>
-
-<p>Ceremony will be held at St. Paul&rsquo;s Lutheran Church in St Louis, Missouri:
+  <p>Ceremony will be held at St. Paul&rsquo;s Lutheran Church in St Louis, Missouri:
 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12471.800633602004!2d-90.4435193!3d38.6040174!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb17cee89aca2e25a!2sSt+Paul&#39;s+Lutheran+Church!5e0!3m2!1sen!2sus!4v1492659895111" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></p>
 
 <p><br></p>
 
 <p>We hope you can join us for the reception at the Concordia Seminary:
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12465.868227214663!2d-90.312138!3d38.6381398!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x360daad5fbce126!2sConcordia+Seminary%2C+St.+Louis+Campus!5e0!3m2!1sen!2sus!4v1492659997426" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3204.0561312873388!2d-90.31516050453625!3d38.63873459658247!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x360daad5fbce126!2sConcordia+Seminary%2C+St.+Louis+Campus!5e0!3m2!1sen!2sus!4v1492660386351" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></p>
 
 </article>
 
