--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <div class="content">
               <div class="inner">
                 <h1>Vieker & Anderson Wedding</h1>
-                <p><!--[-->Information for the big day...<!--]--><br />
-                <!--[-->Check back for coming updates!<!--]--></p>
+                <p><!--[-->October 14, 2017 | Saint Louis, Missouri<!--]--></p>
               </div>
             </div>
             <nav>
@@ -55,19 +54,16 @@
             
               <article id="wedding_day">
   <h1>Wedding Day</h1>
-  <p>Ceremony at St. Paul&rsquo;s Lutheran Church, Des Peres, Mo (see directions tab)</p>
-
-<p>Pre-service Music: 1:30 PM</p>
-
-<p>Ceremony: 2 PM</p>
-
-<p>Join us for a reception at inset seminary.</p>
-
-<p>Cocktail hour: 5 PM</p>
-
-<p>Dinner: 6 PM</p>
-
-<p>Dancing and Conversation: 7:30-10:30 PM</p>
+  <p><center>October 14, 2017</center>
+<br>
+<center>Ceremony will be held at St. Paul&rsquo;s Lutheran Church, Saint Louis, Missouri.</center>
+<center>Preservice Concert: 1:30 PM</center>
+<center>Ceremony: 2 PM</center>
+<br>
+<center>Join us after the ceremony in Koburg Hall at Concordia Seminary, Saint Louis.</center>
+<center>Cocktail hour: 5 PM</center>
+<center>Dinner: 6 PM</center>
+<center>Dancing and Conversation: 7:30-10:30 PM</center></p>
 
 </article>
 
@@ -94,7 +90,7 @@
 <p><br></p>
 
 <p>We hope you can join us for the reception in Koburg Hall at the Concordia Seminary:
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3204.0561312873388!2d-90.31516050453625!3d38.63873459658247!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x360daad5fbce126!2sConcordia+Seminary%2C+St.+Louis+Campus!5e0!3m2!1sen!2sus!4v1492660386351" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3116.4977045885357!2d-90.31278473465728!3d38.637434929611544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d8cabb65743797%3A0xda0d1eece8a27114!2sKoburg+Hall%2C+Clayton%2C+MO+63105!5e0!3m2!1sen!2sus!4v1492662385086" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></p>
 
 </article>
 
