update content bg

--- a/index.html
+++ b/index.html
@@ -54,9 +54,7 @@
             
               <article id="wedding_day">
   <h1>Wedding Day</h1>
-  <p><center>October 14, 2017</center>
-<br>
-<center>Ceremony will be held at St. Paul&rsquo;s Lutheran Church, Saint Louis, Missouri.</center>
+  <p><center>Ceremony will be held at St. Paul&rsquo;s Lutheran Church, Saint Louis, Missouri.</center>
 <center>Preservice Concert: 1:30 PM</center>
 <center>Ceremony: 2 PM</center>
 <br>
