update content bg

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             
               <article id="accomodations">
   <h1>accomodations</h1>
-  <p>Check back soon for more information regarding recommended accommodations.</p>
+  <p>Check back in May for more information regarding recommended accommodations.</p>
 
 </article>
 
