update content bg

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <p><br></p>
 
 <p>We hope you can join us for the reception in Koburg Hall at the Concordia Seminary:
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3116.4977045885357!2d-90.31278473465728!3d38.637434929611544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d8cabb65743797%3A0xda0d1eece8a27114!2sKoburg+Hall%2C+Clayton%2C+MO+63105!5e0!3m2!1sen!2sus!4v1492662385086" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12465.868227214663!2d-90.312138!3d38.6381398!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x360daad5fbce126!2sConcordia+Seminary%2C+St.+Louis+Campus!5e0!3m2!1sen!2sus!4v1492699761234" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></p>
 
 </article>
 
