update content bg

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             
               <article id="details">
   <h1>Details</h1>
-  <p><center>Ceremony will be held at St. Paul&rsquo;s Lutheran Church, Saint Louis, Missouri.</center>
-<center>Preservice Concert: 1:30 PM</center>
+  <p><center>Ceremony will be held at St. Paul&rsquo;s Lutheran Church, Des Peres, Missouri.</center>
+<center>Preservice Music: 1:30 PM</center>
 <center>Ceremony: 2 PM</center>
 <br>
 <center>Join us after the ceremony in Koburg Hall at Concordia Seminary, Saint Louis.</center>
@@ -82,7 +82,7 @@
             
               <article id="directions">
   <h1>directions</h1>
-  <p>Ceremony will be held at St. Paul&rsquo;s Lutheran Church in St. Louis, Missouri:
+  <p>Ceremony will be held at St. Paul&rsquo;s Lutheran Church, Des Peres, Missouri:
 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12471.800633602004!2d-90.4435193!3d38.6040174!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb17cee89aca2e25a!2sSt+Paul&#39;s+Lutheran+Church!5e0!3m2!1sen!2sus!4v1492660501588" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></p>
 
 <p><br></p>
