--- a/index.html
+++ b/index.html
@@ -68,14 +68,16 @@
             
               <article id="accomodations">
   <h1>accomodations</h1>
-  <p>Check back in May for more information regarding recommended accommodations.</p>
+  <p>Check back in early July for more information regarding recommended accommodations.</p>
 
 </article>
 
             
               <article id="registry">
   <h1>registry</h1>
-  <p>Check back soon for an update.</p>
+  <p>We are registered at Amazon, Bed Bath &amp; Beyond, Crate &amp; Barrel, and Target.</p>
+
+<p><a href="https://registry.theknot.com/rebecca-vieker-christopher-anderson-october-2017-mo/20798527?lt=RegistryProfile&amp;st=SearchResults&amp;ss=RegistryColumn&amp;sp=TextLink&amp;_ref_val_=https%3A%2F%2Fwww.theknot.com%2Fregistry%2Fcouplesearch%23firstName%3DRebecca%26lastName%3DVieker%26eventMonth%3D10%26eventYear%3D2017%26eventType%3DWedding%26reset%3Dtrue%26track%3Dtrue"><span style="color:red"> Click here </span></a> to see a list of all registed items in one simple location.</p>
 
 </article>
 
