--- a/index.html
+++ b/index.html
@@ -61,14 +61,23 @@
 <center>Join us after the ceremony in Koburg Hall at Concordia Seminary, Saint Louis.</center>
 <center>Cocktail hour: 5 PM</center>
 <center>Dinner: 6 PM</center>
-<center>Dancing and Conversation: 7:30-10:30 PM</center></p>
+<center>Dancing and Conversation: 7:30-10 PM</center></p>
 
 </article>
 
             
               <article id="accomodations">
   <h1>accomodations</h1>
-  <p>Check back in early July for more information regarding recommended accommodations.</p>
+  <p>Click on either of the hotels below to reserve at a discounted rate until September 12.
+    *<a href="http://www.hilton.com/en/hi/groups/personalized/S/STLHIHF-SP-20171011/index.jhtml?WT.mc_id=POG"><span style="color:red"> Hilton St. Louis Airport</span></a>
+    *Second Hotel Option Coming Soon!</p>
+
+<p>Other accommodations that may be of interest:
+    *Cheshire Hotel <a href="http://www.cheshirestl.com/">http://www.cheshirestl.com/</a> (0.5 miles from reception)
+    *Drury Inn &amp; Suites St. Louis Brentwood <a href="https://www.druryhotels.com/locations/st-louis-mo/drury-inn-and-suites-st-louis-brentwood">https://www.druryhotels.com/locations/st-louis-mo/drury-inn-and-suites-st-louis-brentwood</a> (2.5 miles from reception)
+    *Airbnb <a href="https://www.airbnb.com/">https://www.airbnb.com/</a></p>
+
+<p>[<span style="color:red"> Click here </span>] (</p>
 
 </article>
 
