--- a/index.html
+++ b/index.html
@@ -69,15 +69,13 @@
               <article id="accomodations">
   <h1>accomodations</h1>
   <p>Click on either of the hotels below to reserve at a discounted rate until September 12.
-    *<a href="http://www.hilton.com/en/hi/groups/personalized/S/STLHIHF-SP-20171011/index.jhtml?WT.mc_id=POG"><span style="color:red"> Hilton St. Louis Airport</span></a>
+    *<a href="http://www.hilton.com/en/hi/groups/personalized/S/STLHIHF-SP-20171011/index.jhtml?WT.mc_id=POG"><span style="color:red">Hilton St. Louis Airport</span></a>
     *Second Hotel Option Coming Soon!</p>
 
 <p>Other accommodations that may be of interest:
-    *Cheshire Hotel <a href="http://www.cheshirestl.com/">http://www.cheshirestl.com/</a> (0.5 miles from reception)
-    *Drury Inn &amp; Suites St. Louis Brentwood <a href="https://www.druryhotels.com/locations/st-louis-mo/drury-inn-and-suites-st-louis-brentwood">https://www.druryhotels.com/locations/st-louis-mo/drury-inn-and-suites-st-louis-brentwood</a> (2.5 miles from reception)
-    *Airbnb <a href="https://www.airbnb.com/">https://www.airbnb.com/</a></p>
-
-<p>[<span style="color:red"> Click here </span>] (</p>
+    *<a href="http://www.cheshirestl.com/"><span style="color:red">Cheshire Hotel </span></a> - 0.5 miles from reception
+    *<a href="https://www.druryhotels.com/locations/st-louis-mo/drury-inn-and-suites-st-louis-brentwood"><span style="color:red">Drury Inn &amp; Suites St. Louis Brentwood </span></a> - 2.5 miles from reception
+    *<a href="https://www.airbnb.com/"><span style="color:red">Airbnb</span></a></p>
 
 </article>
 
