--- a/index.html
+++ b/index.html
@@ -68,14 +68,21 @@
             
               <article id="accomodations">
   <h1>accomodations</h1>
-  <p>Click on either of the hotels below to reserve at a discounted rate until September 12.
-    *<a href="http://www.hilton.com/en/hi/groups/personalized/S/STLHIHF-SP-20171011/index.jhtml?WT.mc_id=POG"><span style="color:red">Hilton St. Louis Airport</span></a>
-    *Second Hotel Option Coming Soon!</p>
+  <p>Click on either of the hotels below to reserve at a discounted rate until September 12.</p>
 
-<p>Other accommodations that may be of interest:
-    *<a href="http://www.cheshirestl.com/"><span style="color:red">Cheshire Hotel </span></a> - 0.5 miles from reception
-    *<a href="https://www.druryhotels.com/locations/st-louis-mo/drury-inn-and-suites-st-louis-brentwood"><span style="color:red">Drury Inn &amp; Suites St. Louis Brentwood </span></a> - 2.5 miles from reception
-    *<a href="https://www.airbnb.com/"><span style="color:red">Airbnb</span></a></p>
+<pre><code>*[&lt;span style=&quot;color:red&quot;&gt;Hilton St. Louis Airport&lt;/span&gt;] (http://www.hilton.com/en/hi/groups/personalized/S/STLHIHF-SP-20171011/index.jhtml?WT.mc_id=POG)
+
+*Second Hotel Option Coming Soon!
+</code></pre>
+
+<p>Other accommodations that may be of interest:</p>
+
+<pre><code>*[&lt;span style=&quot;color:red&quot;&gt;Cheshire Hotel &lt;/span&gt;] (http://www.cheshirestl.com/) - 0.5 miles from reception
+
+*[&lt;span style=&quot;color:red&quot;&gt;Drury Inn &amp; Suites St. Louis Brentwood &lt;/span&gt;] (https://www.druryhotels.com/locations/st-louis-mo/drury-inn-and-suites-st-louis-brentwood) - 2.5 miles from reception
+
+*[&lt;span style=&quot;color:red&quot;&gt;Airbnb&lt;/span&gt;] (https://www.airbnb.com/)
+</code></pre>
 
 </article>
 
