--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 <center>Ceremony: 2 PM</center>
 <br>
 <center>Join us after the ceremony in Koburg Hall at Concordia Seminary, Saint Louis.</center>
-<center>Cocktail hour: 5 PM</center>
-<center>Dinner: 6 PM</center>
-<center>Dancing and Conversation: 7:30-10 PM</center></p>
+<center>Cocktail hour: 5:30 PM</center>
+<center>Dinner: 6:30 PM</center>
+<center>Dancing and Conversation: 7:30 </center></p>
 
 </article>
 
